<resources>
    <string name="app_name">DivineKarma
</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="home_panchang">पूजन क्रिया</string>
    <string name="home_all_aartiyan">सभी आरतियाँ</string>
    <string name="home_dainik_aartiyan">दैनिक आरतियाँ</string>
    <string name="home_horoscope">राशि फल</string>
    <string name="home_pooja_path">पूजा पाठ</string>
    <string name="home_festival_aartiyan">त्योहारों की आरतियाँ</string>
    <string name="fest_holi">होली</string>
    <string name="fest_diwali">दीपावली</string>
    <string name="fest_guruparv">गुरु पर्व</string>
    <string name="fest_janmastmi">कृष्ण जन्माष्टमी</string>
    <string name="fest_ram_navami">हनुमान जयंती</string>
    <string name="fest_christmas">जनामास्तमी</string>
    <string name="ppath_ganpati_pooja">गणपति पूजा</string>
    <string name="ppath_laxmi_pooja">महालक्ष्मी पूजा</string>
    <string name="ppath_saraswati_pooja">सरस्वती पूजा</string>
    <string name="ppath_durga_pooja">दुर्गा पूजा</string>
    <string name="ppath_kaali_pooja">काली पूजा</string>
    <string name="ppath_navgrah_pooja">नवग्रह पूजा</string>
    <string name="ppath_gayatri_pooja">गायत्री पूजा</string>
    <string name="ppath_holi_pooja">होली पूजा</string>
    <string name="ppath_diwali_pooja">दीपावली पूजा</string>
    <string name="ppath_navratre_pooja">नवरात्रे पूजा</string>
    <string name="ans_ganpati_pooja">


<![CDATA[<html><body>
<p>हिन्दू धर्म में किसी भी नए कार्य को शुरू करने से पूर्व श्री गणेश का नाम लिया जाता है। ऐसी मान्यता है की श्री गणेश का नाम ले कर अगर कोई काम शुरु किया जाये तो वो काम अवश्य हीं पूरा होता है। यही नहीं हिन्दू धर्म के मुताबिक किसी भी देवी देवता की पूजा से पूर्व श्री गणेश की पूजा की जाती है। शास्त्रों के मुताबिक बुधवारके दिन को श्री गणेश का दिन कहा जाता है। किसी को विशेष रूप से भगवान गणेश की पूजा करनी होती है तो वे लोग बुधवार को हीं इनकी पूजा करते है । तो चलिए जानते है गणेश जी की पूजा करने की सही और सरल तरीका क्या है ।</p>
<h3><strong>गणेश जी के लिए पूजा की सामग्री सूचि</strong></h3>

\u25A0 गणेश जी की छोटी सी एक मूर्ति (ध्यान लगाने और पूजा के लिए), उनके वस्त्र <br>
\u25A0 गणेश जी को बैठा कर स्नान कराने के लिए एक पात्र <br>
\u25A0 अक्षत, धूप, दीप, अगरबत्ती, कपूर<br>
\u25A0 मोदक, बूंदी लड्डू, लाल चन्दन, रोली, सिन्दूर हल्दी<br>
\u25A0 लाल पुष्प, पान का पत्ता, फल, गंगाजल<br>
\u25A0 पंचामृत, जल, नेवैद्य, आरती के लिए एक पूजा की थाली आदि ।<br><br>

<h3><strong>गणेश जी की पूजा विधि </strong></h3>


\u25A0 सबसे पहले एक साफ़ स्थान पर भगवान गणेश की मूर्ति को स्थापित करे और मूर्ति के समक्ष अपने भी एक साफ़ आसन ज़मीन पर बिछा कर बैठ जाएँ ।<br>
\u25A0 पूजा शुरू करने से पहले सकंल्प लें । संकल्प के लिए अपने हाँथो में जल, एक पुष्प और अक्षत लेकर पूजा के दिन का नाम, साल, तिथि, जिस स्थान पर पूजा कर रहे है उस स्थान का नाम, अपना गोत्र, अपना नाम व अपनी इच्छा बोले।<br>
\u25A0 संकल्प ले लेने के बाद अब हाँथ की सभी सामग्री को जमीन पर छिड़क दें।<br>
\u25A0 अब भगवान गणेश पर अक्षत छिटते हुए उनसे “आवाहन” (मूर्ति में उपस्थित) होने के लिए आग्रह करे।<br>
\u25A0 अब सबसे पहले भगवान गणेश की मूर्ति को एक पात्र में रख कर “ऊँ गं गणपतये नमः पादयोः पाद्यं समर्पयामि” मंत्र को बोलते हुए उनके दोनों पैरो को जल से धोएं ।<br>
\u25A0 पैर धूल जाने के बाद “ऊँ गं गणपतये नमः आचमनीयम् जलं समर्पयामि” बोलते हुए भगवान गणेश  के “आचमन” (मुख शुद्धि) हेतु उन पर जल चढ़ाएँ ।<br>
\u25A0 अब भगवान गणेश को पंचामृत से नहाएं । श्री गणेश जी को नहलाते वक्त इस संस्कृत मंत्र को पढ़ते हुए नहाएं :- “ ऊँ गं गणपतये नमः पंचामृतस्नानं समर्पयामि”।<br>
\u25A0 पंचामृत से स्नान हो जाने के बाद भगवान गणेश को जल से दोबारा स्नान करवाएं।<br>
\u25A0 अब स्नान हो जाने के बाद भगवान गणेश की मूर्ति को पात्र में से निकाल कर एक चौकी पर साफ आसन बिछा कर उस पर बिठाए ।<br>
\u25A0 अब सर्वप्रथम भगवान गणेश को वस्त्र अर्पित करे।<br>
\u25A0 उसके बाद उन्हें लाल रंग के चंदन, रोली, सिन्दूर व हल्दी लगाएं ।<br>
\u25A0 अब “ऊँ गं गणपतये नमः पुष्पं समर्पयामि” मंत्र को बोलते हुए भगवान गणेश को लाल रंग के पुष्प चढ़ाएं।<br>
\u25A0 अब भगवान गणेश को नेवैद्य अर्पित करे बस ध्यान रहे की भगवान गणेश को तुलसी नहीं चढ़ाया जाता है ।<br>
\u25A0 अब उन्हें फल समर्पित कर के “ऊँ गं गणपतये नमः मिष्ठान्न भोजनम् समर्पयामि” मंत्र बोलते हुए मोदक (लड्डू) का भोग लगाएं ।<br>
\u25A0 अब भगवान गणेश को धुप, दीप व अगरबत्ती दिखाएँ ।<br>
\u25A0 पूजा समाप्ति से पहले पूजा भगवान गणेश के मंत्र का १०८ बार जाप करे । मंत्र  है :-<br><br>

<p><strong>ॐ श्री गणेशाये नम: ।। </strong></p>
<p><strong>या</strong></p>
<p><strong>ॐ गं गणपते नम: ।।</strong></p>

\u25A0 अब पूजा की थाली में एक पान का पत्ता रख कर उस पर कपूर जला कर भगवान गणेश की आरती करे ।<br>
\u25A0 आरती के बाद अब भगवान गणेश से हाँथ जोड़ कर पूजा में किसी प्रकार की कमी हो जाने के लिए क्षमा प्रार्थना करे और उनसे अपनी पूजा स्वीकार करने को कहे ।<br>

</body></html>
]]>
    </string>
    <string name="play_ganesh_pooja">हिन्दू धर्म में किसी भी नए कार्य को शुरू करने से पूर्व श्री गणेश का नाम लिया जाता है। ऐसी मान्यता है की श्री गणेश का नाम ले कर अगर कोई काम शुरु किया जाये तो वो काम अवश्य हीं पूरा होता है। यही नहीं हिन्दू धर्म के मुताबिक किसी भी देवी देवता की पूजा से पूर्व श्री गणेश की पूजा की जाती है। शास्त्रों के मुताबिक बुधवारके दिन को श्री गणेश का दिन कहा जाता है। किसी को विशेष रूप से भगवान गणेश की पूजा करनी होती है तो वे लोग बुधवार को हीं इनकी पूजा करते है । तो चलिए जानते है गणेश जी की पूजा करने की सही और सरल तरीका क्या है ।
गणेश जी के लिए पूजा की सामग्री सूचि

गणेश जी की छोटी सी एक मूर्ति (ध्यान लगाने और पूजाके लिए), उनके वस्त्र
गणेश जी को बैठा कर स्नान कराने के लिए एक पात्र
अक्षत, धूप, दीप, अगरबत्ती, कपूर
मोदक, बूंदी लड्डू, लाल चन्दन, रोली, सिन्दूर हल्दी
लाल पुष्प, पान का पत्ता, फल, गंगाजल
पंचामृत, जल, नेवैद्य, आरती के लिए एक पूजा की थाली आदि ।

गणेश जी की पूजा विधि

सबसे पहले एक साफ़ स्थान पर भगवान गणेश की मूर्ति को स्थापित करे और मूर्ति के समक्ष अपने भी एक साफ़ आसन ज़मीन पर बिछा कर बैठ जाएँ ।
पूजा शुरू करने से पहले सकंल्प लें । संकल्प के लिए अपने हाँथो में जल, एक पुष्प और अक्षत लेकर पूजा के दिन का नाम, साल, तिथि, जिस स्थान पर पूजा कर रहे है उस स्थान का नाम, अपना गोत्र, अपना नाम व अपनी इच्छा बोले।
संकल्प ले लेने के बाद अब हाँथ की सभी सामग्री को जमीन पर छिड़क दें।
अब भगवान गणेश पर अक्षत छिटते हुए उनसे “आवाहन” (मूर्ति में उपस्थित) होने के लिए आग्रह करे।
अब सबसे पहले भगवान गणेश की मूर्ति को एक पात्र में रख कर “ऊँ गं गणपतये नमः पादयोः पाद्यं समर्पयामि” मंत्र को बोलते हुए उनके दोनों पैरो को जल से धोएं ।
पैर धूल जाने के बाद “ऊँ गं गणपतये नमः आचमनीयम् जलं समर्पयामि” बोलते हुए भगवान गणेश के “आचमन” (मुख शुद्धि) हेतु उन पर जल चढ़ाएँ ।
अब भगवान गणेश को पंचामृत से नहाएं । श्री गणेश जी को नहलाते वक्त इस संस्कृत मंत्र को पढ़ते हुए नहाएं :- “ ऊँ गं गणपतये नमः पंचामृतस्नानं समर्पयामि”।
पंचामृत से स्नान हो जाने के बाद भगवान गणेश को जल से दोबारा स्नान करवाएं।
अब स्नान हो जाने के बाद भगवान गणेश की मूर्ति को पात्र में से निकाल कर एक चौकी पर साफ आसन बिछा कर उस पर बिठाए ।
अब सर्वप्रथम भगवान गणेश को वस्त्र अर्पित करे।
उसके बाद उन्हें लाल रंग के चंदन, रोली, सिन्दूर व हल्दी लगाएं ।
अब “ऊँ गं गणपतये नमः पुष्पं समर्पयामि” मंत्र को बोलते हुए भगवान गणेश को लाल रंग के पुष्प चढ़ाएं।
अब भगवान गणेश को नेवैद्य अर्पित करे बस ध्यान रहे की भगवान गणेश को तुलसी नहीं चढ़ाया जाता है ।
अब उन्हें फल समर्पित कर के “ऊँ गं गणपतये नमः मिष्ठान्न भोजनम् समर्पयामि” मंत्र बोलते हुए मोदक (लड्डू) का भोग लगाएं ।
अब भगवान गणेश को धुप, दीप व अगरबत्ती दिखाएँ ।
पूजा समाप्ति से पहले पूजा भगवान गणेश के मंत्र का १०८ बार जाप करे । मंत्र है

ॐ श्री गणेशाये नम: ।।
या
ॐ गं गणपते नम:

अब पूजा की थाली में एक पान का पत्ता रख कर उस पर कपूर जला कर भगवान गणेश की आरती करे ।
आरती के बाद अब भगवान गणेश से हाँथ जोड़ कर पूजा में किसी प्रकार की कमी हो जाने के लिए क्षमा प्रार्थना करे और उनसे अपनी पूजा स्वीकार करने को कहे ।
</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="text_not_member"><u>No account yet? Create one</u></string>
    <string name="text_already_member"><u>Already a member? Login</u></string>
</resources>