<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.hp.musicapp.Login_Page"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/mainPage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/om1"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputEditTextEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/hint_email"
            android:textSize="20dp"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:textColor="@color/colorPrimaryDark" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="10dp"
        android:layout_marginTop="20dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputEditTextPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/hint_password"
            android:textSize="20dp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="10dp"

            android:textColor="@color/colorPrimaryDark" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/appCompatButtonLogin"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textSize="16dp"
        android:background="@drawable/white_corner"
        android:text="@string/text_login" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textViewLinkRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/text_not_member"
        android:textSize="16dp" />


</LinearLayout>
